# CodeAtlas

./: README.md  codeatlas.bat  pyproject.toml  requirements.txt
docs/: index.md
scripts/: bump_version.py
src/codeatlas/: __init__.py  cli.py  extractor.py  scanner.py  tui.py  typing.py
src/codeatlas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/codeatlas/formatter/: __init__.py  json_.py  markdown.py  text.py
tests/: __init__.py  test_cli.py  test_extractor.py  test_formatter.py  test_scanner.py  test_tui.py
