[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeatlas"
version = "0.1.0"
description = "Directory scanner for summarizing project trees"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
codeatlas = "codeatlas.cli:app"
codeatlas-tui = "codeatlas.tui:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
